force-app/main/default/objects/FeedbackSentimentResponse__c/FeedbackSentimentResponse__c.object-meta.xml
<CustomObject>
    <label>Feedback Sentiment Response</label>
    <nameField>
        <displayFormat>FSR-{00000}</displayFormat>
        <label>Feedback Sentiment Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Sentiment Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>