force-app/main/default/objects/FeedbackSentimentResponse__c/fields/ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTime__c</fullName>
    <formula>IF(FLOOR(( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24) &lt; 1, &quot;&quot;,
Text(
FLOOR(( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24))

&amp;&quot;hr &quot;) &amp;Text(

FLOOR((( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24 - FLOOR(( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24))* 60))

&amp;&quot;min &quot;&amp;Text(

FLOOR((( ( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24 - FLOOR(( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24 )) * 60 - FLOOR((( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24 - FLOOR(( CreatedDate -  Feedback_Response__r.CreatedDate  ) * 24 )) * 60 )) * 60 )) &amp; &quot;sec&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time</label>
    <type>Text</type>
</CustomField>