force-app/main/default/objects/FeedbackSentimentResponse__c/fields/Feedback_Response__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Response__c</fullName>
    <label>Feedback Response</label>
    <referenceTo>FeedbackResponse__c</referenceTo>
    <relationshipLabel>Feedback Sentiment Responses</relationshipLabel>
    <relationshipName>Feedback_Sentiment_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>